<resources>
    <string name="app_name">Amuse Me</string>

    <string name="zero">0</string>

    <string name="logo_desc">Logotype icon</string>
    <string name="menu_desc">Menu icon</string>
    <string name="back_desc">Back icon</string>
    <string name="eye_desc">Eye icon</string>
    <string name="dislike_desc">Dislike icon</string>
    <string name="like_desc">Like icon</string>

    <string name="generator_loader_inactive_desc">Inactive generator image</string>
    <string name="generator_loader_active_desc">Active generator image</string>
    <string name="generator_help">Чтобы получить идею для\nзанатия удерживайте…</string>

    <string name="themes_fragment_title">Выбор тем</string>
    <string name="theme_img_desc">Theme card image</string>
    <string name="theme_img_bw_desc">Theme card image (black-white)</string>
    <string name="theme_title_holder">Theme title</string>
    <string name="theme_desc_holder">Theme holder. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus placerat bibendum placerat</string>

    <string name="amusement_img_desc">Amusement card image</string>
    <string name="amusement_title_holder">Amusement title</string>
    <string name="amusement_desc_holder">Amusement holder. Lorem ipsum dolor sit amet, consectetur adipiscing elit.\nPellentesque quis ex vitae nulla maximus cursus. Aenean lorem elit, mattis sit amet euismod eu, mollis vel justo</string>

    <string name="error_img_desc">Error image</string>
    <string name="error_title_holder">Error title</string>
    <string name="error_desc_holder">Error holder. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque quis ex vitae nulla maximus cursus</string>
    <string name="error_btn_text">Главная</string>

    <string name="error_0_title">Неизвестная ошибка</string>
    <string name="error_0_desc">Произошла неизвестная ошибка. Пожалуйста, отправьте письмо на почту с описанием своих действий: izholobov2004@gmail.com</string>
    <string name="error_1_title">Нет подключения к Интернету</string>
    <string name="error_1_desc">Не удаётся подключиться к серверу. Вернитесь на главную и проверьте своё подключение к сети Интернет</string>
    <string name="error_2_title">Ошибка при обработке запроса</string>
    <string name="error_2_desc">Попробуйте сделать ещё одну попытку через 5 мин. Если проблема осталась - напишите об этом на почту: izholobov2004@gmail.com</string>

</resources>