<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/themeLayout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="220dp"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/themeImgBW"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:scaleType="centerCrop"
        android:contentDescription="@string/theme_img_bw_desc"
        app:shapeAppearance="@style/themeCard"
        android:src="@drawable/theme_img_default_bw"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/themeImg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:scaleType="centerCrop"
        android:contentDescription="@string/theme_img_desc"
        app:shapeAppearance="@style/themeCard"
        android:src="@drawable/theme_img_default"
        android:alpha="0"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="1"
        android:background="@drawable/theme_card_shadow"
        android:padding="18dp">

        <TextView
            android:id="@+id/themeTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/themeDesc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            android:text="@string/theme_title_holder"
            android:fontFamily="@font/roboto_medium"
            android:textSize="18sp"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/themeDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/themeTitle"
            android:text="@string/theme_desc_holder"
            android:fontFamily="@font/roboto_regular"
            android:textSize="16sp"
            android:textColor="@color/gray_100"/>

        <CheckBox
            android:id="@+id/themeCheckbox"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>