<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/controlBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">

        <Space
            android:id="@+id/errorSpaceTop"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/errorImg"/>

        <ImageView
            android:id="@+id/errorImg"
            android:layout_width="128dp"
            android:layout_height="128dp"
            app:layout_constraintTop_toBottomOf="@id/errorSpaceTop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/errorTitle"
            android:src="@drawable/error_unknown"
            android:scaleType="centerCrop"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/error_img_desc"/>

        <TextView
            android:id="@+id/errorTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/errorImg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/errorDesc"
            android:text="@string/error_title_holder"
            style="@style/textTitleStyle"
            android:textSize="20sp"
            android:layout_marginBottom="15dp"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/errorDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/errorTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/errorBtn"
            android:text="@string/error_desc_holder"
            style="@style/textContentStyle"
            android:textAlignment="center"
            android:textSize="16sp"
            android:layout_marginBottom="30dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/errorBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/errorDesc"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/errorSpaceBottom"
            android:text="@string/error_btn_text"
            android:textSize="16sp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            app:cornerRadius="5dp"
            android:fontFamily="@font/roboto_medium"
            android:letterSpacing="0"
            android:textAllCaps="false"
            android:layout_marginBottom="100dp"/>

        <Space
            android:id="@+id/errorSpaceBottom"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/errorBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/controlBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/controlBarHeight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0">

        <ImageView
            android:id="@+id/controlBarLogo"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:contentDescription="@string/logo_desc"
            android:src="@drawable/icon_logo_dark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:adjustViewBounds="true"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>