<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/tempGradientStart"
    android:orientation="vertical"
    tools:context=".GeneratorFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/generatorContentLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/controlBar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/generatorHelp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/generator_help"
            android:textAlignment="center"
            android:textColor="@color/tempWhite"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/generatorLoaderLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/generatorLoaderLayout"
            android:layout_width="280dp"
            android:layout_height="280dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/generatorHelp"
            android:layout_marginBottom="100dp">

            <ImageView
                android:id="@+id/generatorLoaderInactive"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/generator_loader_inactive"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:scaleType="centerCrop"
                android:contentDescription="@string/generator_loader_inactive_desc"/>

            <ImageView
                android:id="@+id/generatorLoaderActive"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/generator_loader_active"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:scaleType="centerCrop"
                android:contentDescription="@string/generator_loader_active_desc"
                android:alpha="0"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/controlBar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintBottom_toTopOf="@id/generatorContentLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0">

        <ImageView
            android:id="@+id/controlBarLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/logo_desc"
            android:src="@drawable/icon_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/controlBarSpace"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Space
            android:id="@+id/controlBarSpace"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/controlBarMenu"
            app:layout_constraintStart_toEndOf="@id/controlBarLogo"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/controlBarMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/menu_desc"
            android:src="@drawable/icon_menu"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/controlBarSpace"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>