<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AmusementFragment"
    android:orientation="vertical"
    android:layout_gravity="center">

    <ImageView
        android:id="@+id/amusementImg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/amusement_img_desc"
        android:scaleType="centerCrop"
        android:src="@drawable/amusement_img_default"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/amusementContentContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="1"
        android:background="@drawable/amusement_card_shadow"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingBottom="30dp"
        android:paddingTop="40dp">

        <TextView
            android:id="@+id/amusementTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/amusementDesc"
            android:text="@string/amusement_title_holder"
            android:fontFamily="@font/montserrat_bold"
            android:textSize="26sp"
            android:textColor="@color/tempWhite"
            android:layout_marginBottom="6dp"/>

        <TextView
            android:id="@+id/amusementDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/amusementTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/amusementButtonsContainer"
            android:text="@string/amusement_desc_holder"
            android:fontFamily="@font/montserrat_medium"
            android:textSize="18sp"
            android:textColor="@color/tempDarkWhite"
            android:layout_marginBottom="20dp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/amusementButtonsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/amusementDesc">

            <ImageView
                android:id="@+id/amusementViewsIcon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/icon_eye"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/amusementViewsText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/eye_desc"
                app:tint="@color/tempDarkWhite" />

            <TextView
                android:id="@+id/amusementViewsText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/zero"
                android:textColor="@color/tempWhite"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/amusementButtonsContainerSpace"
                app:layout_constraintStart_toEndOf="@id/amusementViewsIcon"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="7dp"/>

            <Space
                android:id="@+id/amusementButtonsContainerSpace"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/amusementDislikesIcon"
                app:layout_constraintStart_toEndOf="@id/amusementViewsText"
                app:layout_constraintTop_toTopOf="parent"/>

            <ImageView
                android:id="@+id/amusementDislikesIcon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/icon_dislike"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/amusementDislikesText"
                app:layout_constraintStart_toEndOf="@id/amusementButtonsContainerSpace"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/dislike_desc"
                app:tint="@color/tempDarkWhite" />

            <CheckBox
                android:visibility="gone"
                android:id="@+id/amusementDislikesCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/amusementDislikesText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/zero"
                android:textColor="@color/tempWhite"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/amusementLikesIcon"
                app:layout_constraintStart_toEndOf="@id/amusementDislikesIcon"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="7dp"/>

            <ImageView
                android:id="@+id/amusementLikesIcon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/icon_like"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/amusementLikesText"
                app:layout_constraintStart_toEndOf="@id/amusementDislikesText"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="30dp"
                android:contentDescription="@string/like_desc"
                app:tint="@color/tempDarkWhite" />

            <CheckBox
                android:visibility="gone"
                android:id="@+id/amusementLikesCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/amusementLikesText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/zero"
                android:textColor="@color/tempWhite"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/amusementLikesIcon"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="7dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/controlBar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0">

        <ImageView
            android:id="@+id/controlBarBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/back_desc"
            android:src="@drawable/icon_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>